feat : update score, is_confirmed
1. update score api
2.  update is_confirmed api
