# web_server_gin/docs/swagger.yaml
@@ -851,6 +851,31 @@ paths:
       summary: Update one Player groupId by id
       tags:
       - Player
+  /data/player/isconfirmed/{roundendid}:
+    put:
+      consumes:
+      - application/json
+      description: Update one Player isConfirmed by id
+      parameters:
+      - description: RoundEnd ID
+        in: path
+        name: roundendid
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+      summary: Update one Player isConfirmed by id
+      tags:
+      - Player
   /data/player/laneid/{playerid}:
     put:
       consumes:
@@ -912,6 +937,31 @@ paths:
           schema:
             type: string
       summary: Create one RoundScore by RoundEnd ID
+      tags:
+      - Player
+  /data/player/score/{roundscore}:
+    put:
+      consumes:
+      - application/json
+      description: Update one Player score by id
+      parameters:
+      - description: RoundScore ID
+        in: path
+        name: roundscore
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+      summary: Update one Player score by id
       tags:
       - Player
   /data/player/scores/{id}:
