# web_server_gin/routers/DataRouter.go
@@ -63,6 +63,8 @@ func playerRouter(data *gin.RouterGroup) {
 	data.POST("/roundscore", translate.PostRoundScore)
 	data.PUT("/lane/:id", translate.UpdatePlayerLaneId)
 	data.PUT("/group/:id", translate.UpdataPlayerGroupId)
+	data.PUT("/isconfirmed/:id", translate.UpdatePlayerIsConfirmed)
+	data.PUT("/roundscore/:id", translate.UpdatePlayerScore)
 	//data.PUT("shootoffscore/:id", translate.PutPlayerShootoffScore)
 	data.DELETE("/:id", translate.DeletePlayer)
 }
